cmake: 直接转为 spark 构建, 并调整目录结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,39 +3,28 @@ cmake_minimum_required(VERSION 3.5.1)
 
 project(license-search LANGUAGES CXX VERSION 0.2)
 
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTORCC ON)
-
-find_package(Qt5 COMPONENTS Core Widgets Network)
-
-# 头文件目录
-include_directories()
+include(cmake/SparkEnvConfig.cmake)
+include(cmake/SparkMacrosConfig.cmake)
+include(cmake/SparkFindLibraries.cmake)
+include(cmake/SparkFindQt5Config.cmake)
+# include(cmake/SparkFindQt6Config.cmake)
+include(cmake/SparkMacrosExtendConfig.cmake)
 
 # 资源文件路径
 set(QRC_SOURCES "")
 
-add_subdirectory(LicenceInfoObject)
-add_subdirectory(NetworkRequest)
-add_subdirectory(LicenceInfoManage)
+spark_add_library_realpaths(
+    src/utils/NetworkRequest
+    src/utils/LicenceInfoObject+NetworkRequest
+    src/utils/LicenceInfoManage+LicenceInfoObject
+)
 
-add_executable(${PROJECT_NAME} "main.cpp"
-    "mainwindow.cpp" "mainwindow.h" "mainwindow.ui" 
+spark_add_executable_path(${PROJECT_NAME} src
     ${QRC_SOURCES}
 )
-# target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Widgets Qt5::Network)
+target_link_LicenceInfoManage(${PROJECT_NAME})
 
-target_include_directories(${PROJECT_NAME} PRIVATE
-    ${LicenceInfoObject_INCLUDE_DIRS}
-    ${NetworkRequest_INCLUDE_DIRS}
-    ${LicenceInfoManage_INCLUDE_DIRS}
-)
-target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Widgets Qt5::Network
-    ${LicenceInfoObject_LIBRARIES}
-    ${NetworkRequest_LIBRARIES}
-    ${LicenceInfoManage_LIBRARIES}
-)
+include(cmake/SparkBuildGraphviz.cmake)
 
 
 # 设置安装路径的前缀(默认为"/usr/local")
@@ -45,10 +34,10 @@ set(CMAKE_INSTALL_PREFIX "/opt")
 install(TARGETS ${PROJECT_NAME} 
     DESTINATION share/youwant/license-search) 
 
-install(FILES open_source_license.png
+install(FILES assets/open_source_license.png
     DESTINATION share/youwant/license-search/icon) 
 
-install(FILES license-search.desktop
+install(FILES assets/license-search.desktop
     DESTINATION share/applications)
 
 # package deb
